test/bad/8.cc
#include <string>

using std::string;

int main()
{
    string x, y, z;
    int a = x;
}